--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,6 +1,10 @@
-@dark-purple: #2a275c;
+/*@dark-purple: #2a275c;
 @btn-background: #5862a8;
-@light-purple: #e8edfa;
+@light-purple: #e8edfa;*/
+
+@dark-green:#103634;
+@btn-background: #4da85e;
+@light-green:#edfaed;
 html, body {
   font-family: 'Mulish', sans-serif;
   font-size: 16px;
@@ -24,7 +28,7 @@ main {
 h1 {
     margin-top:20px;
     text-align: center;
-    color: @dark-purple;
+    color: @dark-green;
     font-size: 4em;
     font-weight:600;
 }
@@ -32,11 +36,11 @@ h1 {
 .logo {
   font-family:'Mulish', sans-serif;
   font-size: 2em;
-  color:@light-purple;
+  color:@light-green;
 }
 
 .navbar {
-  background-color: @dark-purple;
+  background-color: @dark-green;
 }
 ul.navbar-nav .nav-item .nav-link.ember-nav {
   color: #fff;
@@ -44,8 +48,8 @@ ul.navbar-nav .nav-item .nav-link.ember-nav {
 
 .btn-white{
     background-color: #fff;
-    color:@dark-purple;
-    border: solid 1px @dark-purple;
+    color:@dark-green;
+    border: solid 1px @dark-green;
     border-radius: 5px;
 }
 
@@ -54,9 +58,9 @@ ul.navbar-nav .nav-item .nav-link.ember-nav {
 }
 
 .editPwdBtn {
-  background: @light-purple;
+  background: @light-green;
   border: none;
-  color: @dark-purple;
+  color: @dark-green;
   font-weight: 700;
 }
 /*--------------Home--------------*/
@@ -101,14 +105,14 @@ h2.home-head{
 .intro {
   width: 100vw;
   height: 350px;
-  background-color: @light-purple;
-  border-color: @light-purple;
+  background-color: @light-green;
+  border-color: @light-green;
 
   .col-6 {
     display: flex;
     align-items: center;
     h2{
-      color: @dark-purple;
+      color: @dark-green;
     }
   }
 
@@ -122,7 +126,7 @@ h2.home-head{
       border-radius: 50%;
       border: 2px solid @btn-background;
       margin-top: -30px;
-      box-shadow: inset 0 0 200px @dark-purple;
+      box-shadow: inset 0 0 200px @dark-green;
     }
   }
 
@@ -145,7 +149,7 @@ h2.home-head{
 
 /*--------------Posts Page--------------*/
 .posts-container{
-  border-bottom: 1px solid @light-purple;
+  border-bottom: 1px solid @light-green;
   margin-top: 20px;
 }
 
@@ -210,7 +214,7 @@ h2.home-head{
       margin: 5px 9px;
 
       a {
-        color: @dark-purple;
+        color: @dark-green;
       }
 
      &.disabled{
@@ -224,11 +228,11 @@ h2.home-head{
       display: inline-block;
       padding: 5px 9px;
       margin: 5px 9px;
-      background-color: @light-purple;
+      background-color: @light-green;
       border-radius: 5px;
 
       a {
-        color: @dark-purple;
+        color: @dark-green;
       }
 
       &.active {
@@ -239,7 +243,7 @@ h2.home-head{
 }
 /*--------------Posts Details--------------*/
 .post-details-image {
-  background-color: @light-purple;
+  background-color: @light-green;
   width: 100vw;
   height: 520px;
   margin: 0 auto;
@@ -278,7 +282,7 @@ footer{
     margin-top: 20px;
     width: 100vw;
     min-height: 200px;
-    background: @dark-purple;
+    background: @dark-green;
 }
 
 /*--------------Modal Box--------------*/
